@@ -1301,6 +1301,13 @@ _PyObject_GetDictPtr(PyObject *obj)
 /* Generic GetAttr functions - put these in your tp_[gs]etattro slot */
 
 PyObject *
+PyObject_GenericGetIter(PyObject *obj)
+{
+	Py_INCREF(obj);
+	return obj;
+}
+
+PyObject *
 PyObject_GenericGetAttr(PyObject *obj, PyObject *name)
 {
 	PyTypeObject *tp = obj->ob_type;
